--- a/patterns/_grid.scss
+++ b/patterns/_grid.scss
@@ -18,34 +18,34 @@
   letter-spacing: -0.36em;                                       // 1
   list-style: none;
   text-rendering: optimizespeed;                                 // 2
-  margin-left: -(calc-rem($base-spacing-unit, $base-font-size)); // 3
+  margin-left: -(calc-em($base-spacing-unit, $base-font-size));  // 3
 }
 
-    // =============================
-    // Core Grid Item Element Styling
-    // =============================
+// =============================
+// Core Grid Item Element Styling
+// =============================
 
-    //
-    // Core Grid Item Element creates a building block to house layout elements.
-    // Example Use - Any element within the page layout will contain this class.
-    //
-    // 1. Letter spacing set to normal, to override cascade from .grid container, and all text values reverted back to defaults.
-    // 2. Cause columns to stack side-by-side.
-    // 3. Align columns to the tops of each other.
-    // 4. Space columns apart.
-    // 5. Add box-sizing to grid items if global variable returns false.
-    //
+//
+// Core Grid Item Element creates a building block to house layout elements.
+// Example Use - Any element within the page layout will contain this class.
+//
+// 1. Letter spacing set to normal, to override cascade from .grid container, and all text values reverted back to defaults.
+// 2. Cause columns to stack side-by-side.
+// 3. Align columns to the tops of each other.
+// 4. Space columns apart.
+// 5. Add box-sizing to grid items if global variable returns false.
+//
 
-    .grid__item {
-      letter-spacing: normal;                                      // 1
-      text-rendering: auto;                                        // 1
-      word-spacing: normal;                                        // 1
-      display: inline-block;                                       // 2
-      vertical-align: top;                                         // 3
-      padding-left: calc-rem($base-spacing-unit, $base-font-size); // 4
+  .grid__item {
+    letter-spacing: normal;                                      // 1
+    text-rendering: auto;                                        // 1
+    word-spacing: normal;                                        // 1
+    display: inline-block;                                       // 2
+    vertical-align: top;                                         // 3
+    padding-left: calc-em($base-spacing-unit, $base-font-size);  // 4
 
-      @if $global-box-sizing == false {
-          box-sizing: border-box;                                  // 5
-      }
-
+    @if $global-box-sizing == false {
+        box-sizing: border-box;                                  // 5
     }
+
+  }
