--- a/utilities/format-model/_position.scss
+++ b/utilities/format-model/_position.scss
@@ -14,9 +14,18 @@ $_viewport-position-enable: true !default;
 //
 
 @if ($_position-enable) {
-	.position-static,   %position-static   { position: static   !important }
-	.position-relative, %position-relative { position: relative !important }
-	.position-absolute, %position-absolute { position: absolute !important }
+	.position-static,
+	%position-static   {
+		position: static   !important
+	}
+	.position-relative,
+	%position-relative {
+		position: relative !important
+	}
+	.position-absolute,
+	%position-absolute {
+		position: absolute !important
+	}
 }
 
 // =============================
